Fix dark mode

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,12 +75,12 @@
    */
 
   body {
-    --ion-color-primary: #00ff00;
-    --ion-color-primary-rgb: 0,255,0;
-    --ion-color-primary-contrast: #ffffff;
+    --ion-color-primary: #ffffff;
+    --ion-color-primary-rgb: 255,255,255;
+    --ion-color-primary-contrast: #000000;
     --ion-color-primary-contrast-rgb: 0,0,0;
-    --ion-color-primary-shade: #00e000;
-    --ion-color-primary-tint: #1aff1a;
+    --ion-color-primary-shade: #e0e0e0;
+    --ion-color-primary-tint: #fefefe;
 
     --ion-color-secondary: #006633;
     --ion-color-secondary-rgb: 0,102,51;
